--- a/public/css/app.css
+++ b/public/css/app.css
@@ -138,7 +138,7 @@ h3 {
     position: absolute;
     right: 10px;
     top: 10px;
-    background-image: url(../img/lupa.png);
+    background-image: url(../img/magnifyingGlass.png);
     background-color: transparent;
     border: none;
     background-size: 20px;
