--- a/public/css/app.css
+++ b/public/css/app.css
@@ -406,8 +406,8 @@ p.candidatos {
     align-self: flex-start;
     margin-right: 1rem;
 }
-.cerrar-sesion p, 
-.cerrar-sesion a {
+
+.close-session-element {
     margin:  0 2rem 0 0 ;
     color: #888;
 }
@@ -415,7 +415,9 @@ p.candidatos {
     margin-top: 2rem;
     color: white;
     display: flex;
+	flex-direction: column;
 }
+
 .cerrar-sesion img {
         width: 80px;
 }
